--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
 >
   <div class="header-inner">
       <div class="logo-wr" routerLink="/dashboard">
-          <img src="assets/img/logo-header.svg" alt="logo">
+          <img src="assets/img/logo-exrates.svg" alt="logo">
       </div>
       <div class="menu-wr">
           <div class="left-part">
