--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -70,11 +70,38 @@
 		}
 	}
 }
-
+header{
+	font-size: calc(.5816rem + .5816vw);
+	@media(min-width: 1440px){
+		font-size: 20px;
+	}
+}
 .header{
 	padding: 0 1.2em;
 	background: #0F1032;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	button{
+		background-color: transparent;
+		border: none;
+		outline: none;
+		padding: 0;
+	}
+	p,span, h1,h2,h3,h4,h5,h6{
+		margin: 0;
+	}
+	label, button, a{
+		cursor: pointer;
+		margin: 0;
+		outline: none;
+		font: inherit;
+		text-decoration: none;
+		&:hover{
+			text-decoration: none;
+		}
+		&:focus{
+			outline: none;
+		}
+	}
 	.menu-wr{
 		display: flex;
 		width: 100%;
@@ -85,7 +112,99 @@
 	.header-inner{
 		display: flex;
 		justify-content: space-between;
-		/* align-items: center; */
+		.drop{
+			position: relative;
+			height: 100%;
+			&:hover{
+				&>a{
+					span{
+
+						color: #fff;
+					}
+				}
+			}
+			&>a{
+				&::after {
+					display: inline-block;
+					margin-left: 5px;
+					margin-bottom: -2px;
+					border-top: 4px solid #7e849a;
+					border-right: 4px solid transparent;
+					border-left: 4px solid transparent;
+					vertical-align: middle;
+					content: "";
+					transition: .2s;
+				}
+			}
+			.submenu__list {
+				position: relative;
+				display: flex;
+				flex-direction: column;
+				align-items: stretch;
+			}
+
+			.submenu {
+				min-width: 110px;
+				position: absolute;
+				top: 2.2em;
+				left: 0;
+				margin: auto;
+				z-index: 4;
+				opacity: 0;
+				pointer-events: none;
+				background-color: #fff;
+				border-radius: 4px;
+				-webkit-transform: translateY(-10px);
+				transform: translateY(-10px);
+				transition: .2s;
+			}
+			&:hover{
+				&>a{
+					&::after {
+						transform: rotate(180deg);
+						border-top: 4px solid #fff;
+
+					}
+				}
+			}
+			&:hover .submenu {
+				opacity: 1;
+				-webkit-transform: translateY(0);
+				transform: translateY(0);
+				pointer-events: auto;
+				transition: .3s;
+			}
+			.submenu .submenu__item {
+				transition: .3s;
+				margin: 0;
+				width: 100%;
+				margin-right: 0;
+
+			}
+
+			.submenu .submenu__item:hover {
+				background-color: rgba(53,124,225,.1);
+			}
+			.submenu .submenu__item:hover .menu__link-text{
+				color: #237bef;
+			}
+			.submenu__link {
+				display: -ms-flex;
+				display: flex;
+				padding: 10px;
+				text-decoration: none;
+				color: rgba(255,255,255,.7);
+				white-space: nowrap;
+			}
+
+			.submenu .menu__link-text {
+				color: #191a39;
+				padding: 0;
+				font-weight: 400;
+			}
+
+
+		}
 
 	}
 	.left-part{
@@ -104,7 +223,7 @@
 		ul{
 			display: flex;
 			align-items: center;
-
+			height: 100%;
 		}
 		li{
 			margin-right: .8em;
@@ -114,6 +233,7 @@
 				display: flex;
 				align-items: center;
 				height: 100%;
+				padding-bottom: .2em;
 				&:hover, &.active{
 					span{
 						color: #fff;
@@ -129,6 +249,7 @@
 					color: #7e849a;
 					text-transform: lowercase;
 					transition: .3s;
+					line-height: .8;
 				}
 				.label{
 					position: absolute;
@@ -169,6 +290,7 @@
 			display: flex;
 			align-items: center;
 			height: 100%;
+			padding-bottom: .2em;
 			&:hover, &.active{
 				span{
 					color: #fff;
@@ -185,6 +307,7 @@
 				color: #7e849a;
 				text-transform: lowercase;
 				transition: .3s;
+				line-height: .8;
 			}
 		}
 	}
@@ -250,7 +373,7 @@
 			border: 1px solid #237BEF;
 			border-radius: 2px;
 			display: block;
-			padding: .4em .4em;
+			padding: .3em .4em .2em;
 			transition: .3s;
 			&:hover{
 				background-color: #4590F3;
@@ -258,7 +381,7 @@
 		}
 		span{
 			color: #FFFFFF;
-			line-height: .9;
+			line-height: .8;
 			font-weight: 500;
 			font-size: .8em;
 			display: block;
@@ -266,6 +389,7 @@
 			font-variant: small-caps;
 			text-transform: lowercase;
 			transition: .3s;
+			padding-bottom: .2em;
 		}
 	}
 	.lang{
@@ -364,93 +488,7 @@
 	}
 }
 
-.drop{
-	position: relative;
-	height: 100%;
-	&>a{
-		&::after {
-			display: inline-block;
-			margin-left: 4px;
-			margin-bottom: -1px;
-			border-top: 4px solid #7e849a;
-			border-right: 4px solid transparent;
-			border-left: 4px solid transparent;
-			vertical-align: middle;
-			content: "";
-			transition: .2s;
-		}
-	}
-	.submenu__list {
-		position: relative;
-		display: flex;
-		flex-direction: column;
-		align-items: stretch;
-	}
 
-	.submenu {
-		min-width: 110px;
-		position: absolute;
-		top: 2.2em;
-		left: 0;
-		margin: auto;
-		z-index: 4;
-		opacity: 0;
-		pointer-events: none;
-		background-color: #fff;
-		border-radius: 4px;
-		-webkit-transform: translateY(-10px);
-		transform: translateY(-10px);
-		transition: .2s;
-	}
-	&:hover{
-		&>a{
-			&::after {
-				transform: rotate(180deg);
-				border-top: 4px solid #fff;
-
-			}
-		}
-	}
-	&:hover .submenu {
-		opacity: 1;
-		-webkit-transform: translateY(0);
-		transform: translateY(0);
-		pointer-events: auto;
-		transition: .3s;
-	}
-	.submenu .submenu__item {
-		transition: .3s;
-		margin: 0;
-		width: 100%;
-		margin-right: 0;
-
-	}
-
-	.submenu .submenu__item:hover {
-		background-color: rgba(53,124,225,.1);
-	}
-	.submenu .submenu__item:hover .menu__link-text{
-		color: #237bef;
-	}
-	.submenu__link {
-		display: -ms-flex;
-		display: flex;
-		padding: 10px;
-		text-decoration: none;
-		color: rgba(255,255,255,.7);
-		white-space: nowrap;
-	}
-
-	.submenu .menu__link-text {
-		font-size: .65em;
-		font-weight: 300;
-		color: #191a39;
-		padding: 0;
-		font-weight: 400;
-	}
-
-
-}
 .menu-mob__wrap-links {
 	display: none;
 	border-bottom: 1px solid #525f73;
