--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,28 +6,28 @@
 >
   <div class="header-inner">
       <div class="logo-wr" routerLink="/dashboard">
-          <img src="assets/img/logo-header.svg" alt="logo">
+          <img src="assets/img/logo-exrates.svg" alt="logo">
       </div>
       <div class="menu-wr">
           <div class="left-part">
               <div class="nav main-nav-left">
                   <ul>
                       <li>
-                          <a routerLink="/dashboard"><span>trade</span></a>
+                          <a routerLink="/dashboard" routerLinkActive="active"><span>{{'Trade' | translate}}</span></a>
                       </li>
                       <li>
                           <div class="drop">
-                              <a routerLinkActive="active"><span>Funds</span></a>
+                              <a routerLinkActive="active"><span>{{'Funds' | translate}}</span></a>
                               <div class="submenu">
                                   <ul class="menu submenu__list">
                                       <li class="submenu__item">
-                                          <a class="submenu__link" routerLink="/funds/balances" target="blank">
-                                              <span class="menu__link-text">Balances</span>
+                                          <a class="submenu__link" routerLink="/funds/balances">
+                                              <span class="menu__link-text">{{'Balances' | translate}}</span>
                                           </a>
                                       </li>
                                       <li class="submenu__item">
-                                          <a class="submenu__link" routerLink="/funds/transaction-history" target="blank">
-                                              <span class="menu__link-text">Transaction history</span>
+                                          <a class="submenu__link" routerLink="/funds/transaction-history">
+                                              <span class="menu__link-text">{{'Transaction history' | translate}</span>
                                           </a>
                                       </li>
                                   </ul>
@@ -36,17 +36,17 @@
                       </li>
                       <li>
                           <div class="drop">
-                              <a routerLinkActive="active"><span>Orders</span></a>
+                              <a routerLinkActive="active"><span>{{'Orders' | translate}}</span></a>
                               <div class="submenu">
                                   <ul class="menu submenu__list">
                                       <li class="submenu__item">
                                           <a class="submenu__link" routerLinkActive="active" routerLink="/orders/open" target="blank">
-                                              <span class="menu__link-text">Open orders</span>
+                                              <span class="menu__link-text">{{'Open orders' | translate}}</span>
                                           </a>
                                       </li>
                                       <li class="submenu__item">
                                           <a class="submenu__link" routerLinkActive="active" routerLink="/orders/closed" target="blank">
-                                              <span class="menu__link-text">Orders history</span>
+                                              <span class="menu__link-text">{{'Orders history' | translate}}</span>
                                           </a>
                                       </li>
                                   </ul>
@@ -54,16 +54,16 @@
                           </div>
                       </li>
                       <li>
-                          <a href="/index.html" routerLinkActive="active"><span>About us</span></a>
+                          <a href="https://about.exrates.me/about-us"><span>{{'About us' | translate }}</span></a>
                       </li>
                       <li>
-                          <a href="/form-listing.html" routerLinkActive="active"><span>Apply to list</span></a>
+                          <a href="https://about.exrates.me/form-listing/"><span>{{'Apply to lis' | translate }}</span></a>
                       </li>
                       <li>
-                          <a routerLink="/ieo" routerLinkActive="active"><span>Token Sale</span></a>
+                          <a routerLink="/ieo" routerLinkActive="active"><span>{{'Token Sale' | translate }}</span></a>
                       </li>
                       <li>
-                          <a routerLink="/fiat" routerLinkActive="active"><span>Fiat</span><span class="label">new</span></a>
+                          <a routerLink="/fiat" routerLinkActive="active"><span>{{'FIAT' | translate}}</span><span class="label">{{'new' | translate}}</span></a>
                       </li>
                   </ul>
               </div>
@@ -72,39 +72,39 @@
               <div class="nav main-nav-right">
                   <ul>
                       <li>
-                          <a routerLink="/news" routerLinkActive="active"><span>News</span></a>
+                          <a routerLink="/news" routerLinkActive="active"><span>{{'News' | translate}}</span></a>
                       </li>
                       <!-- <li>
-            <a href="#"><span>Announcments</span></a>
-          </li> -->
+                        <a href="#"><span>Announcments</span></a>
+                      </li> -->
                       <li>
                           <div class="drop">
-                              <a routerLinkActive="active"><span>Community</span></a>
+                              <a routerLinkActive="active"><span>{{'Community' | translate}}</span></a>
                               <div class="submenu">
                                   <ul class="menu submenu__list">
                                       <li class="submenu__item">
                                           <a class="submenu__link" href="https://t.me/exrates_official" target="blank">
-                                              <span class="menu__link-text">Community World</span>
+                                              <span class="menu__link-text">{{'Community World' | translate}}</span>
                                           </a>
                                       </li>
                                       <li class="submenu__item">
                                           <a class="submenu__link" href="https://t.me/exrates_official_cn" target="blank">
-                                              <span class="menu__link-text">Community China</span>
+                                              <span class="menu__link-text">{{'Community China' | translate}</span>
                                           </a>
                                       </li>
                                       <li class="submenu__item">
                                           <a class="submenu__link" href="https://t.me/exrates_official_id" target="blank">
-                                              <span class="menu__link-text">Community Indonesia</span>
+                                              <span class="menu__link-text">{{'Community Indonesia' | translate}}</span>
                                           </a>
                                       </li>
                                       <li class="submenu__item">
                                           <a class="submenu__link" href="https://t.me/exrates_official_ru" target="blank">
-                                              <span class="menu__link-text"> Community Russia</span>
+                                              <span class="menu__link-text">{{'Community Russia' | translate}}</span>
                                           </a>
                                       </li>
                                       <li class="submenu__item">
                                           <a class="submenu__link" href="https://t.me/exrates_official_ko" target="blank">
-                                              <span class="menu__link-text">Community Korea</span>
+                                              <span class="menu__link-text">{{'Community Korea' | translate}}</span>
                                           </a>
                                       </li>
                                   </ul>
@@ -113,58 +113,100 @@
                       </li>
                   </ul>
                   <!-- start not auth user -->
-                  <div class="login">
-                      <button><span>Login</span></button>
-                  </div>
-                  <div class="register">
-                      <button><span>Register</span></button>
-                  </div>
+                  <ng-template #login>
+                    <div class="login">
+                      <button (click)="onMobileLogin()"><span>{{'Log In' | translate}}</span></button>
+                    </div>
+                    <div class="register">
+                      <button (click)="openRegistration()"><span>{{'Register' | translate}}</span></button>
+                    </div>
+                  </ng-template>
                   <!-- end not auth user -->
                   <!-- start auth user -->
-                  <!-- <div class="account">
-          <span class="login-menu__icon">
-            <svg fill="none" height="18" viewBox="0 0 18 18" width="18" xmlns="http://www.w3.org/2000/svg">
-              <g clip-path="url(#clip0)">
-                <path d="M9.0002 9.53152C11.229 9.53152 13.036 7.41659 13.036 4.80773C13.036 1.18995 11.2291 0.0839844 9.0002 0.0839844C6.7712 0.0839844 4.96436 1.18995 4.96436 4.80773C4.9644 7.41659 6.77125 9.53152 9.0002 9.53152Z" fill="#a0a0a0"></path>
-                <path d="M17.912 16.4849L15.8759 11.8981C15.7827 11.6882 15.6191 11.5142 15.4155 11.4081L12.2555 9.76318C12.1859 9.72698 12.1015 9.73402 12.0388 9.78144C11.1451 10.4574 10.0943 10.8147 9.00005 10.8147C7.90566 10.8147 6.85491 10.4574 5.96117 9.78144C5.89835 9.73402 5.81397 9.72698 5.74429 9.76318L2.58456 11.4081C2.38083 11.5142 2.2174 11.6881 2.12418 11.8981L0.0880542 16.4849C-0.0523244 16.8011 -0.0235536 17.1629 0.16504 17.4529C0.353546 17.7429 0.672576 17.916 1.01849 17.916H16.9815C17.3274 17.916 17.6465 17.7428 17.835 17.4529C18.0235 17.1629 18.0524 16.8009 17.912 16.4849Z" fill="#a0a0a0"></path>
-              </g>
-              <defs>
-                <clipPath id="clip0">
-                  <rect fill="#AAB1C4" height="18" width="18"></rect>
-                </clipPath>
-              </defs>
-            </svg>
-          </span>
-          <div class="login-menu__submenu">
-            <div class="login-menu__submenu-item">
-              <div class="item-title">Account</div>
-              <span>lexesss64@gmail.com</span>
-            </div>
-            <div class="login-menu__submenu-item">
-              <div class="item-title">Estimated Holdings</div>
-              <span> $0.0 </span>
-            </div>
-            <a class="menu__link login-menu__link" href="https://exrates.me/settings"><span class="menu__link-text">Settings</span></a>
-            <a class="menu__link login-menu__link menu__link--auth--log"><span class="menu__link-text">Log out</span></a>
-          </div>
-        </div> -->
+                  <ng-container *ngIf="isAuthenticated; else login">
+                    <div class="account">
+                      <span class="login-menu__icon">
+                        <svg fill="none" height="18" viewBox="0 0 18 18" width="18" xmlns="http://www.w3.org/2000/svg">
+                          <g clip-path="url(#clip0)">
+                            <path d="M9.0002 9.53152C11.229 9.53152 13.036 7.41659 13.036 4.80773C13.036 1.18995 11.2291 0.0839844 9.0002 0.0839844C6.7712 0.0839844 4.96436 1.18995 4.96436 4.80773C4.9644 7.41659 6.77125 9.53152 9.0002 9.53152Z" fill="#a0a0a0"></path>
+                            <path d="M17.912 16.4849L15.8759 11.8981C15.7827 11.6882 15.6191 11.5142 15.4155 11.4081L12.2555 9.76318C12.1859 9.72698 12.1015 9.73402 12.0388 9.78144C11.1451 10.4574 10.0943 10.8147 9.00005 10.8147C7.90566 10.8147 6.85491 10.4574 5.96117 9.78144C5.89835 9.73402 5.81397 9.72698 5.74429 9.76318L2.58456 11.4081C2.38083 11.5142 2.2174 11.6881 2.12418 11.8981L0.0880542 16.4849C-0.0523244 16.8011 -0.0235536 17.1629 0.16504 17.4529C0.353546 17.7429 0.672576 17.916 1.01849 17.916H16.9815C17.3274 17.916 17.6465 17.7428 17.835 17.4529C18.0235 17.1629 18.0524 16.8009 17.912 16.4849Z" fill="#a0a0a0"></path>
+                          </g>
+                          <defs>
+                            <clipPath id="clip0">
+                              <rect fill="#AAB1C4" height="18" width="18"></rect>
+                            </clipPath>
+                          </defs>
+                        </svg>
+                      </span>
+                      <div class="login-menu__submenu">
+                        <div class="login-menu__submenu-item">
+                          <div class="item-title">{{'Account' | translate}}</div>
+                          <span>{{ (this.userInfo$ | async).username }}</span>
+                        </div>
+                        <div class="login-menu__submenu-item">
+                          <div class="item-title">{{'Estimated Holdings' | translate}}</div>
+                          <span>${{(myBalance | async)?.data.USD || 0 | roundCurrency: 'USD' | formatCurrency}}</span>
+                        </div>
+                        <a class="menu__link login-menu__link" routerLink="/settings">
+                          <span class="menu__link-text">{{'Settings' | translate}}</span>
+                        </a>
+                        <a class="menu__link login-menu__link menu__link--auth--log" (click)="onLogout()">
+                          <span class="menu__link-text">{{'Log out' | translate}}</span>
+                        </a>
+                      </div>
+                    </div>
+                  </ng-container>
                   <!-- end auth user -->
                   <!-- <div class="lang drop"> -->
                   <!-- <button><span class="cur-lang">English</span></button> -->
                   <!-- <div class="submenu">
-            <ul class="menu submenu__list">
-              <li class="submenu__item">
-                <a class="submenu__link">
-                  <span class="menu__link-text lang-variant">English</span>
-                </a>
-              </li>
-              <li class="submenu__item">
-                <a class="submenu__link">
-                  <span class="menu__link-text lang-variant">Russian</span>
-                </a>
-              </li>
-            </ul>
-          </div> -->
+                    <ul class="menu submenu__list">
+                      <li class="submenu__item">
+                        <a class="submenu__link">
+                          <span class="menu__link-text lang-variant">English</span>
+                        </a>
+                      </li>
+                      <li class="submenu__item">
+                        <a class="submenu__link">
+                          <span class="menu__link-text lang-variant">Russian</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div> -->
+
+                  <!-- old translate block -->
+                  <!-- <ul class="menu language" *ngIf="showContent">
+                      <li class="menu__item menu__item--with-submenu menu__item--disabled">
+                        <a class="menu__link">
+                          <span class="menu__link-text">
+                             <span>{{lang.fullName}}</span>
+                          </span>
+                        </a>
+                         <div class="submenu submenu--language">
+                          <ul class="menu__list submenu__list submenu__list--language">
+                            <li class="submenu__item" *ngFor="let lang of langArray | excludeByField:'name':lang.name">
+                              <a class="submenu__link" (click)="changeLocalization(lang.name)" >
+                                <span class="language__text">{{lang.fullName | translate}}</span>
+                                </a>
+                                </li>
+                          </ul>
+                        </div>
+                      </li>
+                    </ul>
+
+                    <div class="translate">
+                      <button class="translate__trigger">
+                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M14.4 2.4H7.10399L6.40001 0H1.60001C0.719999 0 0 0.719999 0 1.60001V12C0 12.88 0.719999 13.6 1.60001 13.6H7.19999L7.99998 16H14.4C15.28 16 16 15.28 16 14.4V4.00001C16 3.12 15.28 2.4 14.4 2.4ZM4.13201 10.068C2.328 10.068 0.863999 8.59998 0.863999 6.79998C0.863999 4.99998 2.33201 3.53197 4.13201 3.53197C4.96402 3.53197 5.72002 3.82796 6.32002 4.38397L6.37203 4.43598L5.39602 5.37997L5.34802 5.33598C5.12002 5.11998 4.72402 4.86798 4.13201 4.86798C3.084 4.86798 2.232 5.736 2.232 6.804C2.232 7.87199 3.084 8.74001 4.13201 8.74001C5.22802 8.74001 5.70401 8.03999 5.832 7.57199H4.06398V6.33198H7.22399L7.23599 6.38797C7.26798 6.55597 7.27998 6.70398 7.27998 6.87198C7.27601 8.75598 5.98398 10.068 4.13201 10.068ZM8.53998 7.25999H11.736C11.736 7.25999 11.464 8.31198 10.488 9.44801C10.06 8.95601 9.76398 8.47601 9.57599 8.09201H8.78399L8.53998 7.25999ZM9.91199 10.068L9.484 10.492L8.96002 8.70802C9.22799 9.18798 9.55199 9.64799 9.91199 10.068ZM15.2 14.4C15.2 14.84 14.84 15.2 14.4 15.2H8.80001L10.4 13.6L9.748 11.388L10.484 10.6519L12.632 12.7999L13.216 12.216L11.052 10.068C11.772 9.23996 12.332 8.26796 12.584 7.26397H13.6V6.432H10.692V5.59998H9.85998V6.432H8.29199L7.33998 3.19999H14.4C14.84 3.19999 15.2 3.55998 15.2 3.99997V14.4Z" fill="#AAB1C4"/>
+                        </svg>
+                      </button>
+                      <div class="translate__container">
+                        <ng-template [ngTemplateOutlet]="translateTemplate">
+                        </ng-template>
+                      </div>
+                    </div> -->
+                    <!-- old translate block -->
+
                   <!-- </div> -->
                   <div class="translate">
                       <button class="translate__trigger">
