--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,9 +15,9 @@
                       <li>
                           <a routerLink="/dashboard" routerLinkActive="active"><span>{{'Trade' | translate}}</span></a>
                       </li>
-                      <li>
+                      <li [ngClass]="{'d-none': !isAuthenticated}" routerLinkActive="active-parent">
                           <div class="drop">
-                              <a routerLinkActive="active"><span>{{'Funds' | translate}}</span></a>
+                              <a class="active-child"><span>{{'Funds' | translate}}</span></a>
                               <div class="submenu">
                                   <ul class="menu submenu__list">
                                       <li class="submenu__item">
@@ -27,25 +27,25 @@
                                       </li>
                                       <li class="submenu__item">
                                           <a class="submenu__link" routerLink="/funds/transaction-history">
-                                              <span class="menu__link-text">{{'Transaction history' | translate}</span>
+                                              <span class="menu__link-text">{{'Transaction history' | translate}}</span>
                                           </a>
                                       </li>
                                   </ul>
                               </div>
                           </div>
                       </li>
-                      <li>
+                      <li [ngClass]="{'d-none': !isAuthenticated}" routerLinkActive="active-parent">
                           <div class="drop">
-                              <a routerLinkActive="active"><span>{{'Orders' | translate}}</span></a>
+                              <a class="active-child"><span>{{'Orders' | translate}}</span></a>
                               <div class="submenu">
                                   <ul class="menu submenu__list">
                                       <li class="submenu__item">
-                                          <a class="submenu__link" routerLinkActive="active" routerLink="/orders/open" target="blank">
+                                          <a class="submenu__link" routerLinkActive="active" routerLink="/orders/open">
                                               <span class="menu__link-text">{{'Open orders' | translate}}</span>
                                           </a>
                                       </li>
                                       <li class="submenu__item">
-                                          <a class="submenu__link" routerLinkActive="active" routerLink="/orders/closed" target="blank">
+                                          <a class="submenu__link" routerLinkActive="active" routerLink="/orders/closed">
                                               <span class="menu__link-text">{{'Orders history' | translate}}</span>
                                           </a>
                                       </li>
@@ -89,7 +89,7 @@
                                       </li>
                                       <li class="submenu__item">
                                           <a class="submenu__link" href="https://t.me/exrates_official_cn" target="blank">
-                                              <span class="menu__link-text">{{'Community China' | translate}</span>
+                                              <span class="menu__link-text">{{'Community China' | translate}}</span>
                                           </a>
                                       </li>
                                       <li class="submenu__item">
