--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,47 @@
+header{
+		.close-trigger{
+	@media(min-width: 992px){
+		display: none;
+	}
+	width: 20px;
+	height: 20px;
+	position: absolute;
+	top: 16px;
 
+	
+	right: 16px;
+	cursor: pointer;
+	span{
+		position: relative;
+		display: block;
+		width: 20px;
+		height: 20px;
+		transform: rotate(45deg);
+		&:before, &:after{
+			content: '';
+			
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			right: 0;
+			left: 0;
+			margin: auto;
+			background: #fff;
+			display: block;
+		}
+		&::after{
+			width: 100%;
+			height: 2px;
+			border-radius: 2px;
+		}
+		&::before{
+			height:100%; 
+			width: 2px;
+			border-radius: 2px;
+		}
+	}
+}
+}
 
 .mobile-menu{
 	position: fixed;
